syntax = "proto3";
import "google/protobuf/timestamp.proto";

package proto;

option go_package = "internal/gateway/handlers/grpc_hanglers";

service ClientRMQhandlers {
  rpc PublishText(PublishTextRequest) returns (PublishTextResponse);

}

// PublishTextRecord

message PublishTextRequest {
  string exchName = 1;
  string routingKey = 2;
  TextRecord textRecord = 3;
}

message PublishTextResponse {
  string error = 1; // ошибка
}

message TextRecord {
  string RecordID = 1;
  google.protobuf.Timestamp ChngTime = 2;
  string UID = 3;
  string AppID = 4;
  string Text = 5;
  string Metadata = 6;
  int64 Operation = 7;
}

// LoginRec структура сообщния для опараций с текстовыми данными пользователя.
message LoginRecord {
  string RecordID = 1;
  google.protobuf.Timestamp ChngTime = 2;
  string UID = 3;
  string AppID = 4;
  string Login = 5;
  string Psw = 6;
  string Metadata = 7;
}

// BinaryRec структура сообщния для опараций с бинарными данными пользователя.
message BinaryRecord {
  string RecordID = 1;
  google.protobuf.Timestamp ChngTime = 2;
  string UID = 3;
  string AppID = 4;
  string Binary = 5;
  string Metadata = 6;
}

// CardRec структура сообщния для опараций с данными карт пользователя.
message CardRecord {
  string RecordID = 1;
  google.protobuf.Timestamp ChngTime = 2;
  string UID = 3;
  string AppID = 4;
  string Brand = 5;
  string Number = 6;
  string ValidDate = 7;
  string Code = 8;
  string Holder = 9;
  string Metadata = 10;
}

/*
protoc --go_out=. --go_opt=paths=source_relative \
  --go-grpc_out=. --go-grpc_opt=paths=source_relative \
  services.proto
*/

/*
protoc --go_out=./proto --go_opt=paths=source_relative \
  --go-grpc_out=./proto --go-grpc_opt=paths=source_relative \
  proto/services.proto
*/